<resources>
    <string name="app_name">DX8X</string>
    <string name="action_settings">Settings</string>
    <string name="terms_and_conditions">Creating an account means that you are ok with the</string>
    <string name="check_login">Please check your e-mail and password</string>
    <string name="press_again_to_exit">Press again to close ReceptionApp</string>
    <string name="not_valid_email">Please enter valid email id</string>
    <string name="out_of_memory">Out Of Memory</string>
    <string name="not_sufficient_permissions">Not sufficient permissions \n Goto Settings></string>
    <string name="permissionss">>Permissions</string>
    <string name="choose_image_source">Choose Image Resource</string>
    <string name="please_relaunch">"Please relaunch "</string>
    <string name="check_gps">Location Update has encountered a problem. Please Check GPS is ON or OFF</string>
    <string name="gps">" - GPS"</string>
    <string name="this_device_is_not_supported">This Device is not supported</string>
    <string name="problem_connecting_to_the_server">Problem connecting to server,please try later.</string>
    <string name="connecting_to_internet">" Problem connecting to internet,please try again."</string>
    <string name="connection_failed">" Connection failed,please try again."</string>
    <string name="bad_request">" Bad request,please try again."</string>
    <string name="not_found_please">" Not found,please try again."</string>
    <string name="session_timeout_redirecting">Session timeout, Redirecting to login</string>
    <string name="request_timeout_slow_connection">"Request Timeout. Maybe due to slow connection"</string>
    <string name="netwrk_status">Network Status</string>
    <string name="retry">Retry</string>
    <string name="press_one_more_time">Press one more time to push app into background</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Register</string>
    <string name="cretating_account_means">Creating an account means that you are ok with the Terms and Conditions</string>
    <string name="don_t_have_an_account_login">Don\'t have an account? Log In</string>
    <string name="a_link_has">A link has been send to your email please check and reset your password</string>
    <string name="success_msg">Success</string>
    <string name="soemthing_went_wrong">Something went wrong</string>
    <string name="all_log_clear_successfully">All Logs Clear Successfully</string>
    <string name="retry_caps">RETRY</string>
    <string name="exit_caps">EXIT</string>
    <string name="close">Close</string>
    <string name="demo_expired">Development Demonstration Expired</string>
    <string name="contact_company_info">Please contact development team.</string>
    <string name="total_errors">Total error :</string>
    <string name="snapshot_saved">Snapshot saved into gallery</string>
    <string name="permission_denied_ex_strorage">Permission denied to read your External storage</string>
    <string name="error">Restfull error</string>
    <string name="api_is_in_maintenance">Api is in maintenance</string>
    <string name="api_is_expired">Api is in Expired</string>
    <string name="retry_cap">RETRY</string>
    <string name="login_failed">Login failed</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="gps_not_enabled">Gps not enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="view_profile">View Profile</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait</string>
    <string name="after_permission">after permission</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="bold_dollar">$</string>
    <string name="logged_out_successfully">Logout successfully</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="receive_and">Receive and Send Money to Friends!</string>
    <string name="there_are_1">There are 10+ best sequrity service and smart way to earning money from trading for you.</string>
    <string name="next_step">Next Step</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_start">Let\'s Get Started</string>
    <string name="your_safety">Your Safety is Our Top Priority.</string>
    <string name="get_rid_of_">Get rid of your debt, monthly debt payments are the biggest obstacle.</string>
    <string name="enjoy_the_b"> Enjoy the better way on trade just on your phone </string>
    <string name="start_tradi">
Start trading and save your money with invest on crypto currency now.
</string>
    <string name="create_password">Create Password</string>
    <string name="the_passsword">The passsword will unlock your\nwallet only on this service</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confrim_new_password">Confirm new pasword</string>
    <string name="must_be_atl"> Must be atleast 8 characters </string>
    <string name="sign_in_wit"> Sign in with Face ID? </string>
    <string name="i_understand">
I understand that cannot recover this password for me. Learn more
</string>
    <string name="secure_wallet"> Secure Your Wallet</string>
    <string name="don_t_risk_">
Dont risk losing your funds. Product your wallet by saving your Secret Recovery Phrase in a place you trust.
</string>
    <string name="its_the_on">
Its the only way to recover your wallet if you get locked out of the app or get a new device.
</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="not_recommended">(Not Recommended)</string>
    <string name="recommended">Highly Recommended</string>
    <string name="start">Start</string>
    <string name="confirm_secret_nrecovery_phrase">Confirm Secret\nRecovery Phrase</string>
    <string name="secure_your"> Secure your wallets Secret Recovery Phrase </string>
    <string name="why_is_it"> Why is it important? </string>
    <string name="head_text">DX8</string>
    <string name="manual"> Manual </string>
    <string name="write_down">
Write down your Secret Recovery Phrase on a piece of paper and store in a safe place.
</string>
    <string name="security_level"> Security level: Very strong </string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="open_action">Open action</string>
    <string name="ok_action">OK action</string>
    <string name="recover_wallet_warning_text">Recovery wallet warning text</string>
    <string name="erase_wallet_warning_text">Erase wallet warning text</string>
    <string name="are_you_sure_you_want_nto_erase_your_wallet">Are your want\nto erase your wallet?</string>
    <string name="import_from_seed">Import from seed</string>
    <string name="enter_your_secret_recovery_phrase">Enter your secret recovery phrase</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_with_biometrics">Sign in with biometrics?</string>
    <string name="must_be_atleast_8_characters">Must be atleast 8 characters</string>
    <string name="imports">Imports</string>
    <string name="by_proceeding_you_agree_to_these_terms_and_condition">By proceeding you agree to these terms and condition</string>
    <string name="risk">Risk:</string>
    <string name="you_lose_it">You lose it</string>
    <string name="you_forget_">You forget where you put it</string>
    <string name="someone_els">Someone else finds it</string>
    <string name="tips">Tips:</string>
    <string name="store_in_bank">Store in bank vault</string>
    <string name="store_in_a_safe">Store in a safe</string>
    <string name="store_in_multiple">Store in multiple secret places</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="before_continuing">Before continuing we need you to confirm your password</string>
    <string name="btc">0.45876392 BTC</string>
    <string name="confirm">Confrim</string>
    <string name="Bitcoin">BITCOIN</string>
    <string name="action">Action</string>
    <string name="Watchlist">Watchlist</string>
    <string name="convert">Convert</string>
    <string name="Compare">Compare</string>
    <string name="price_alert">PriceAlert</string>
    <string name="trading">Trading</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="usd">7823.78 USD</string>
    <string name="_ac">A/C:\u0020</string>
    <string name="_hi">Hi,\u0020</string>
    <string name="some_id">$7823.78</string>
    <string name="value">14.25%</string>
    <string name="buy">Buy</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="recieved">Recieved</string>
    <string name="date">AUG20, 2020</string>
    <string name="dollar">$84.65</string>
    <string name="number">0x5da5.....3479</string>
    <string name="recieve">Recieve</string>
    <string name="swap">Swap</string>
    <string name="tokens">Tokens</string>
    <string name="nft">NFTs</string>
    <string name="bank_transfer_or_debit_card">Bank transfer or debit card</string>
    <string name="transak">Credit Card</string>
    <string name="require_registratiom">Requires registeration</string>
    <string name="credit_debit">Credit/ debit card or bank transfer depending on location</string>
    <string name="countries">59+ countries, fees and limits vary</string>
    <string name="buy_with">Buy ETH with Transak</string>
    <string name="buy_crypto_">Buy crypto to your wallet</string>
    <string name="you_pay">You pay</string>
    <string name="currency">Currency</string>
    <string name="using_payment_method">Using payment Method</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="card_payment">Card Payment</string>
    <string name="see_calculations">See calculation</string>
    <string name="total_fees">Total fees</string>
    <string name="rate">Rate</string>
    <string name="ethereum_ne">ETHEREUM NETWORK</string>
    <string name="submit">Submit</string>
    <string name="add_new_card">Add New Card</string>
    <string name="name_on_card">Name on card</string>
    <string name="input_your_name">Input your name</string>
    <string name="card_number">Card Number</string>
    <string name="input_card_number">Input card number</string>
    <string name="sample_date">00/00</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="bank_name">Bank Name</string>
    <string name="cvv_hint">000</string>
    <string name="add_bank_account">Add Bank Acccount (ACH)</string>
    <string name="input_bank_name">Input bank name</string>
    <string name="routing_number">Routing Number</string>
    <string name="input_routing_number">Input routing number</string>
    <string name="account_number">Account Number</string>
    <string name="input_account_number">Input account number</string>
    <string name="input_first_name">Input first name</string>
    <string name="input_last_name">Input last name</string>
    <string name="select_payment">Select Payment</string>
    <string name="bank_account_ach">Bank Account (ACH)</string>
</resources>